    move it to toggle.js in the javascript underlay.
  * relativedate: New javascript-alicious plugin that makes all dates display
    relative, in a very nice way, if I say so myself.
  * recentchanges: Make feed links point back to anchors on the recentchanges
    page. (JasonBlevins)
  * Updated French translation. Closes: #502694

 -- Joey Hess <joeyh@debian.org>  Fri, 17 Oct 2008 20:11:02 -0400

ikiwiki (2.67) unstable; urgency=low

  * remove: Avoid $_ breakage. (Stupid, stupid perl.)
  * Updated Spanish translation from Victor Moral.
  * lockedit: Support specifying which users (and IP addresses) a page
    is locked for. This supports most of the ACL type things users have been
    wanting to be done. Closes: #443346 (It does not control who can read a
    page, but that's out of scope for ikiwiki.)
  * orphans: Fix unquoted page name in regexp.
  * google: Plugin provides google site search, contributed by Peter Simons.
  * Pass HTTPS variable through the wrapper so that CGI->https can be used
    by plugins. Closes: #502047
  * inline: Allow MTIME to be used in inlinepage.tmpl.
  * inline: Use the feed's description in the rss and atom links.
    Closes: #502113
  * aggregate: Avoid bug that caused immediate expiration of items
    with a date in the future.

 -- Joey Hess <joeyh@debian.org>  Fri, 17 Oct 2008 13:13:41 -0400

ikiwiki (2.66) unstable; urgency=low

  * recentchanges: Fix redirects to non-page files. 
  * aggregate: Avoid uninitialized value warnings for pages with no recorded
    ctime.
  * attachment: Add admin() pagespec to test if the uploading user is a wiki
    admin.
  * git: Fix handling of utf-8 filenames in recentchanges.
  * tag: Make edit link for new tags ensure that the tags are created
    inside tagbase, when it's set.
  * template: Make edit link for new templates ensure the page is located
    under toplevel templates directory.
  * htmlscrubber: Add a config setting that can be used to disable the