@@ -84,7 +84,7 @@ sub checkconfig () { #{{{
 	}
 } #}}}
 
-sub IkiWiki::displaytime ($;$) { #{{{
+sub IkiWiki::formattime ($;$) { #{{{
 	my $time=shift;
 	my $format=shift;
 	if (! defined $format) {
