@@ -2,8 +2,11 @@
 package IkiWiki::Plugin::relativedate;
 
 use warnings;
+no warnings 'redefine';
 use strict;
 use IkiWiki 2.00;
+use POSIX;
+use Encode;
 
 sub import { #{{{
 	add_underlay("javascript");
@@ -37,6 +40,19 @@ sub include_javascript ($;$) { #{{{
 		'" type="text/javascript" charset="utf-8"></script>'."\n".
 		'<script src="'.urlto("relativedate.js", $page, $absolute).
 		'" type="text/javascript" charset="utf-8"></script>';
+} #}}}
+
+sub IkiWiki::displaytime ($;$) { #{{{
+	my $time=shift;
+	my $format=shift;
+
+	# This needs to be in a form that can be parsed by javascript.
+	# Being fairly human readable is also nice, as it will be exposed as the title
+	# if javascript is not available.
+	my $gmtime=decode_utf8(POSIX::strftime("%a, %d %b %Y %H:%M:%S %z", gmtime($time)));
+
+	return '<span class="date" title="'.$gmtime.'">'.
+		IkiWiki::formattime($time, $format).'</span>';
 } #}}}
 
 1
