@@ -27,7 +27,7 @@
 <span class="desc"><br />Commit type:</span>
 <span class="committype"><TMPL_VAR COMMITTYPE></span>
 <span class="desc"><br />Date:</span>
-<span class="changedate"><span class="date" title="<TMPL_VAR COMMITDATE_RAW>"><TMPL_VAR COMMITDATE></span></span>
+<span class="changedate"><TMPL_VAR COMMITDATE>
 </div>
 <div class=changelog>
 <TMPL_LOOP NAME="MESSAGE">
