@@ -28,7 +28,7 @@
 <div class="inlinefooter">
 
 <span class="pagedate">
-Posted <span class="date" title="<TMPL_VAR CTIME_RAW>"><TMPL_VAR CTIME></span>
+Posted <TMPL_VAR CTIME>
 </span>
 
 <TMPL_IF NAME="TAGS">
